<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.asus.myapplication.Register">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_livestock" android:title="@string/action_livestock"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_tasks" android:title="@string/action_tasks"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_finance" android:title="@string/action_finance"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_sync" android:title="@string/action_sync"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
