<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.asus.myapplication.Register"
        android:nestedScrollingEnabled="false"
        android:id="@+id/signUpLayout">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/textViewSignUpHeader"
            android:id="@+id/textViewSignUpHeader"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:layout_alignParentEnd="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/textViewFirstName"
            android:id="@+id/textViewFirstName"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewSignUpHeader"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/textViewSurname"
            android:id="@+id/textViewSurname"
            android:layout_margin="10dp"
            android:layout_below="@+id/textViewFirstName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/textViewAddress1"
            android:id="@+id/textViewAddress"
            android:layout_below="@+id/textViewSurname"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/textViewCounty"
            android:id="@+id/textViewCounty"
            android:layout_below="@+id/textViewAddress"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/textViewHerdNumber"
            android:id="@+id/textViewHerdNumber"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp"
            android:layout_below="@+id/textViewCounty" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/textViewEmail"
            android:id="@+id/textViewUsername"
            android:layout_below="@+id/textViewHerdNumber"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/textViewPassword"
            android:id="@+id/textViewPassword"
            android:layout_margin="10dp"
            android:layout_below="@+id/editTextPAC" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="PAC"
            android:id="@+id/textView6"
            android:layout_below="@+id/textViewUsername"
            android:layout_margin="10dp"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:imeOptions="actionNext"
            android:id="@+id/editTextFirstName"
            android:layout_alignBottom="@+id/textViewFirstName"
            android:layout_alignEnd="@+id/textViewSignUpHeader" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:imeOptions="actionNext"
            android:id="@+id/editTextHerdNumber"
            android:layout_alignBottom="@+id/textViewHerdNumber"
            android:layout_alignEnd="@+id/textViewSignUpHeader" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextSurname"
            android:inputType="textCapSentences"
            android:imeOptions="actionNext"
            android:layout_alignBottom="@+id/textViewSurname"
            android:layout_alignEnd="@+id/editTextFirstName" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextAddress"
            android:inputType="textCapSentences"
            android:imeOptions="actionNext"
            android:layout_alignBottom="@+id/textViewAddress"
            android:layout_alignEnd="@+id/editTextSurname" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextEmail"
            android:imeOptions="actionNext"
            android:layout_alignBottom="@+id/textViewUsername"
            android:layout_alignStart="@+id/editTextHerdNumber"
            android:layout_alignEnd="@+id/editTextHerdNumber" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPAC"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:layout_below="@+id/textViewUsername"
            android:layout_alignStart="@+id/editTextEmail"
            android:layout_alignEnd="@+id/editTextEmail"
            android:layout_alignBottom="@+id/textView6" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPassword"
            android:imeOptions="actionNext"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/editTextPAC"
            android:layout_alignBottom="@+id/textViewPassword"
            android:layout_below="@+id/editTextPAC" />



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonAddNewUser"
            android:id="@+id/buttonAddNewUser"
            android:onClick="addNewUser"
            android:layout_below="@+id/textViewPassword"
            android:layout_centerHorizontal="true" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerCounty"
            android:layout_alignStart="@+id/editTextPAC"
            android:layout_alignTop="@+id/textViewCounty"
            android:layout_alignBottom="@+id/textViewCounty"
            android:spinnerMode="dropdown"
            android:layout_alignEnd="@+id/editTextHerdNumber" />

    </RelativeLayout>
</ScrollView>