<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView02"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:background="@android:color/darker_gray"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:weightSum="1"
        style="@style/AppTheme">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context="com.example.asus.myapplication.AnimalPregnancyActivity"
            android:id="@+id/animalPregnancyActivity">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/textViewAddPregnancyActivityHeader"
                android:id="@+id/textViewAddPregnancyActivityHeader"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:typeface="serif" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:text="@string/textViewPregnantDamTagNumber"
                android:id="@+id/textViewPregnantDamTagNumber"
                android:layout_below="@id/textViewAddPregnancyActivityHeader"
                android:layout_margin="20dp"
                android:typeface="serif" />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:id="@+id/spinner"
                android:layout_below="@+id/textViewPregnantDamTagNumber"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:text="@string/textViewPregnancyDate"
                android:id="@+id/textViewPregnancyDate"
                android:layout_below="@id/spinner"
                android:layout_margin="20dp"
                android:typeface="serif" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="75px"
                android:layout_margin="20dp"
                android:hint="Enter Date"
                android:inputType="date"
                android:id="@+id/editTextPregnancyDate"
                android:layout_below="@+id/textViewPregnancyDate"
                android:ellipsize="start"
                android:gravity="center"
                android:background="@drawable/edittextshape"
                android:typeface="serif" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonConfirmNewPregnancy"
                android:id="@+id/buttonConfirmNewPregnancy"
                android:layout_margin="20dp"
                android:background="@drawable/buttonshape"
                android:layout_below="@+id/editTextPregnancyDate"
                android:typeface="serif" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonCancelNewPregnancy"
                android:layout_margin="20dp"
                android:id="@+id/buttonCancelNewPregnancy"
                android:layout_below="@+id/buttonConfirmNewPregnancy"
                android:background="@drawable/buttonshape"
                android:typeface="serif" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>