<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView02"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:weightSum="1"
        style="@style/AppTheme">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context="com.example.asus.livestockmanager.AddIncomeActivity"
            android:id="@+id/addIncomeActivity">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/textViewAddIncomeActivityHeader"
                android:id="@+id/textViewAddIncomeActivityHeader"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:typeface="serif" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:text="@string/textViewIncomeAmount"
                android:id="@+id/textViewIncomeAmount"
                android:layout_below="@id/textViewAddIncomeActivityHeader"
                android:layout_margin="20dp"
                android:typeface="serif" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="75px"
                android:hint="Enter Amount"
                android:inputType="numberDecimal"
                android:id="@+id/editTextIncomeAmount"
                android:layout_below="@id/textViewIncomeAmount"
                android:layout_margin="20dp"
                android:ellipsize="start"
                android:gravity="center"
                android:background="@drawable/edittextshape"
                android:typeface="serif" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:text="@string/textViewIncomeDate"
                android:id="@+id/textViewIncomeDate"
                android:layout_below="@id/editTextIncomeAmount"
                android:layout_margin="20dp"
                android:typeface="serif" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:hint="Enter Date"
                android:inputType="date"
                android:id="@+id/editTextIncomeDate"
                android:layout_below="@+id/textViewIncomeDate"
                android:ellipsize="start"
                android:gravity="center"
                android:background="@drawable/edittextshape"
                android:typeface="serif" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/textViewIncomeDescription"
                android:id="@+id/textViewIncomeDescription"
                android:layout_margin="20dp"
                android:layout_below="@+id/editTextIncomeDate"
                android:typeface="serif" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerIncomeTypes"
                android:layout_below="@+id/textViewIncomeDescription"
                android:layout_alignRight="@+id/textViewIncomeDescription"
                android:layout_alignEnd="@+id/textViewIncomeDescription"
                android:layout_alignLeft="@+id/textViewIncomeDescription"
                android:layout_alignStart="@+id/textViewIncomeDescription" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonCancelNewIncome"
                android:layout_margin="20dp"
                android:id="@+id/buttonCancelNewIncome"
                android:layout_below="@+id/buttonConfirmNewIncome"
                android:background="@drawable/buttonshape"
                android:typeface="serif" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonConfirmNewIncome"
                android:id="@+id/buttonConfirmNewIncome"
                android:layout_margin="20dp"
                android:background="@drawable/buttonshape"
                android:layout_below="@+id/spinnerIncomeTypes"
                android:typeface="serif" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>